# basic

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  epoll_server.c  sync_queue.cc  test  test.cc  thread-vs-fiber.cpp  thread_pool.cc  thread_pool.hpp
ai/: hello_tf.py
ai/bp/: bp.py
ai/nn/fcn/: README.md  fcn.py
ai/nn/xor/: xor.py
ai/word2vec/: README.md  skip_gram.ipynb  skip_gram2.ipynb  test.py  test.txt  test2.py  word2vec.py
ai/word2vec/.ipynb_checkpoints/: skip_gram-checkpoint.ipynb  skip_gram2-checkpoint.ipynb
c++/: delete-delete[].cpp  noncopyable.cpp
coroutine/: CMakeLists.txt  Makefile  coroutine2-example.cpp  example  simple  simple_fiber.cpp
coroutine/fiber/: CMakeLists.txt  Makefile  coroutine2-simple.cpp  example  fiber-example.cpp  simple_fiber.cpp  work_sharing.cpp  work_stealing.cpp
designpatterns/observer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  observer.hpp  test  test.cc
designpatterns/singleton/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  singleton-hungry.cpp  singleton-lazy.cpp  singleton.hpp  test  test.cc
fork/: mmap-1.cpp  mmap-file.cpp  mqueue.cpp  pipe.cpp  pv.cpp  shm.cpp
httpserver/: .gitignore  README.md
httpserver/http/server/: CMakeLists.txt  Makefile  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  http_server  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
memory/: shared_ptr.hpp  unique_ptr.hpp
nets/tcp/linux/: CMakeLists.txt  epoll_client.c  epoll_server.c
nets/tcp/unix/: toolutils.cc  toolutils.h
nets/tcp/unix/kqueue/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  kqueue_client.c  kqueue_server.c  server
nets/tcp/unix/poll/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  poll_client.c  poll_server.c  server
nets/tcp/unix/select/: CMakeCache.txt  (+8 more)
platform/cpp_call_python/: Python3.hpp  test.cpp
tcpserver/: README.md
tcpserver/example/: Client.hpp  Server.cc
tcpserver/src/: CMakeLists.txt  Makefile  RWHandler.hpp  Server.hpp
tcpserver/test/: CMakeLists.txt  Client.cc  Makefile
thing/: .gitignore  README.md
thread/: CMakeLists.txt  Makefile  README.md  sync_queue.hpp
threadpool/: CMakeCache.txt
tools/: endian.cpp
(+8 files in other folders)
